# water_scan_ai_project

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: quality-check.yml
changelog/: index.html
contributing/: index.html
crisp_dm_stages/: index.html
docs/: changelog.md  contributing.md  crisp_dm_stages.md  index.md  installation.md  module_1.md  module_2.md  module_3.md  module_4.md  module_5.md  module_6.md  modules_index.md  project_structure.md  tests.md  usage.md
docs/styles/: extra.css
installation/: index.html
mlflow-minio-setup/: docker-compose.yml
module_1/: index.html
module_2/: index.html
module_3/: index.html
module_4/: index.html
module_5/: index.html
module_6/: index.html
modules_index/: index.html
notebooks/: crisp_dm_stages.ipynb
project_structure/: index.html
search/: search_index.json
src/: data_pipeline.py  mlflow_logger.py  model_registry.py  model_trainer.py  trainer_factory.py  water_scan_main.py
styles/: extra.css
tests/: conftest.py  index.html  test_data_pipeline.py  test_model_trainer.py  test_trainer_factory.py
usage/: index.html
